# oncofind

./: .gitignore  README.md  index.html  linkedin_post.md  package-lock.json  package.json
oncofind/: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
oncofind/.github/workflows/: publish.yml  tests.yml
oncofind/docs/science/: cccs_methodology.md
oncofind/oncofind/: __init__.py  exceptions.py
oncofind/oncofind/cli/: main.py
oncofind/oncofind/cli/commands/: deg.py  download.py  pancancer.py  report.py  score.py  survival.py  validate.py
oncofind/oncofind/cli/utils/: __init__.py  console.py  manifest.py  validators.py
oncofind/oncofind/config/: cancer_types.py  druggability.py  settings.py
oncofind/oncofind/core/analysis/: batch.py  cccs.py  deg.py  pca.py  survival.py
oncofind/oncofind/core/data/: cache.py  clinical_store.py  dgidb_client.py  expression_store.py  gdc_client.py
oncofind/oncofind/core/report/: __init__.py  generator.py
oncofind/oncofind/core/report/templates/: report.html.j2
oncofind/oncofind/core/validation/: __init__.py  cosmic_benchmark.py
oncofind/oncofind/core/visualization/: __init__.py  heatmap.py  pancancer_plot.py  survival_plot.py  volcano.py
oncofind/scripts/: recover_preprocess.py  run_full_pipeline.py  score_from_deg.py  weight_sensitivity.py
oncofind/tests/: conftest.py
oncofind/tests/fixtures/: clinical_sample.csv
oncofind/tests/fixtures/BRCA/: clinical_metadata.parquet  expression_matrix.parquet  gene_map.csv
oncofind/tests/fixtures/COAD/: clinical_metadata.parquet  expression_matrix.parquet
oncofind/tests/fixtures/LUAD/: clinical_metadata.parquet  expression_matrix.parquet
oncofind/tests/test_cli/: test_deg_command.py  test_pancancer_command.py  test_survival_command.py
oncofind/tests/test_core/: test_cccs.py  test_deg_analysis.py  test_druggability.py  test_expression_store.py
paper/: manuscript.tex  references.bib
scripts/: run_pancancer_paper_pipeline.py
(+9 files in other folders)
